[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyBjson"
version = "1.1.0"
description = "Python module to convert MC3DS BJSON <-> JSON."
readme = "README.md"
authors = [{ name = "STBrian", email = "brichap100@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["bjson"]
dependencies = [
    
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/STBrian/pyBjson"

[tool.bumpver]
current_version = "1.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"','version = "{version}"']
"src/pyBjson/__init__.py" = ['^__version__ = "{version}"$']
